# amcheck

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.dev  README-error-handling  README-error-handling.txt  README-running  README-running.txt  README-testing  README-testing.txt  README.md  TODO  make.sh  make_internal.sh  run_dev.sh
settings/: prod.json5.example  prod.pkl.example  prod.toml.example  test.toml
src/: configuration.rs  lib.rs  main.rs  my_imap_wrapper.rs
test/dovecot_based/: cert.pem  dovecot.conf.template  key.pem  maildir_diff.sh
test/dovecot_based/bad_mails/: bad_body_1.abox  settings.json5  test.bats
test/dovecot_based/bad_mails/initial_mail/INBOX/new/: 1702449991.287739_11.abox  1702449991.287739_3.abox  1702449991.287739_5.abox  1702449992.287739_5.abox  1702449993.287739_5.abox  1702449994.287739_5.abox  1702449995.287739_5.abox  1702449996.287739_5.abox  1702449997.287739_5.abox  1702449998.287739_5.abox
test/dovecot_based/bad_mails/initial_mail/amcheck_storage/new/: 1702450013.287930_3.abox
test/dovecot_based/checks/: settings.json5  test.bats
test/dovecot_based/checks/initial_mail/INBOX/new/: 1702450510.325528_1.abox
test/dovecot_based/checks/initial_mail/amcheck_storage/new/: 1725336071.108351_3.2b60b02dea90  1727227369.430783_3.2b60b02dea90  1727404611.697547_1.2b60b02dea90
test/dovecot_based/simple/: test.bats
test/dovecot_based/simple/initial_mail/INBOX/new/: 1702449715.280916_1277.abox  1702449815.280916_1281.abox  1702449933.280916_1285.abox  1702450302.298950_1.abox  1724608700.38183_1.2b60b02dea90
test/dovecot_based/simple/target_mail/INBOX/new/: 1702449991.287739_3.abox  1702449991.287739_5.abox
test/dovecot_based/simple/target_mail/amcheck_storage/new/: 1724609332.39149_1.2b60b02dea90
test/dovecot_based/simple_check/: settings.json5  test.bats
test/dovecot_based/simple_check/initial_mail/amcheck_storage/new/: 1725336065.108351_1.2b60b02dea90
test/dovecot_based/simple_move/: settings.json5  settings.toml  test.bats
test/dovecot_based/simple_move/initial_mail/INBOX/new/: 1702449754.280916_1279.abox
test/dovecot_based/simple_move/target_mail/INBOX/new/: 1702450349.300052_1.abox
test/test_helper/: common-setup.bash  kill-imapd.bash  launch-imapd.bash
