[package]
name = "amcheck"
version = "1.0.0"
edition = "2021"
description = "System for automating checks on mails, typically mails produced by other automations.  Something like a very verbose procmail but (1) for IMAP and (2) with a focus on reporting on emails that look like something went wrong."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imap = "3.0.0-alpha.14"
native-tls = "0.2"
imap-proto = "0.16"
regex = "1"
config = "0.13"
tracing-logfmt = "0.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "ansi", "fmt"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
secrecy = { version = "0.8", features = ["serde"] }
time = { version = "0.3", features = ["local-offset", "parsing"] }
serde_regex = "1.1"
error-stack = "0.4"
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"
